# 2d-ecs-engine

./: '  .gitignore  CMakeLists.txt  Makefile  README.md  build.zig  compile_commands.json  flake.nix  imgui.ini
.cache/clangd/index/: ECS.cpp.0770EFC349134DE5.idx  ECS.h.285864289C6FBD83.idx  Game.cpp.D0B6426AFFFFD15C.idx  Game.h.830A1062D3E4C091.idx  Logger.cpp.1C1F51A393D1AF55.idx  Logger.h.7ABF6160D734FFCF.idx  Main.cpp.D2AAF0BCAC7A1A02.idx  SDL.h.AB29D1F2B699AC28.idx  SDL_assert.h.035D1E6BD9C86100.idx  SDL_atomic.h.D55C03BE26AB6EA7.idx  SDL_audio.h.B2E28F9E8CE2548E.idx  SDL_blendmode.h.C6511D7242C47608.idx  SDL_clipboard.h.02A718B66D4C4509.idx  SDL_config.h.C15727F4FA9F9C60.idx  SDL_config_windows.h.F342EBA6C24C5CC0.idx  SDL_cpuinfo.h.F864214FD31B1269.idx  SDL_endian.h.732D3539F20B2E84.idx  SDL_error.h.30CF939C08D68396.idx  SDL_events.h.8228D3A9ECF1D084.idx  SDL_filesystem.h.2EA90CDB819404E5.idx  SDL_gamecontroller.h.241C7D3D884F8CF8.idx  SDL_gesture.h.82A9CD0E4181F460.idx  SDL_guid.h.24EFF76EA082E1EB.idx  SDL_haptic.h.C53B5CD0217F3F89.idx  SDL_hidapi.h.42B140E7CD8E1EE3.idx  SDL_hints.h.EF12EC74186BC187.idx  SDL_image.h.BF5D029895A86C07.idx  SDL_joystick.h.4FCA38B185AC788F.idx  SDL_keyboard.h.52D081F4EE0EBD9F.idx  SDL_keycode.h.902AADA3E78E05FF.idx  SDL_loadso.h.14657EE5BF9B5541.idx  SDL_locale.h.821C3FF1A5302A08.idx  SDL_log.h.EE1525D2E6E95001.idx  SDL_main.h.0FDC0E6FFA529176.idx  SDL_messagebox.h.58C2B129B8F96AE0.idx  SDL_metal.h.3B37FCB5AB7A65B2.idx  SDL_misc.h.DC1C14DCB831AE4B.idx  SDL_mixer.h.7F7EF2D190E03EED.idx  SDL_mouse.h.5BC85B10566D76BF.idx  SDL_mutex.h.F50E32DAA5827D7B.idx  (+227 more)
libs/header/sol/: sol.hpp
make/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: Main.cpp  Utils.hpp
src/AssetManager/: AssetManager.cpp  AssetManager.h
src/Components/: AnimationComponent.h  BigDoorComponent.h  BoxColliderComponent.h  CollectibleComponent.h  ColliderComponent.h  ControlPanelComponent.h  DarknessComponent.h  DoorComponent.h  LifetimeComponent.h  ParentComponent.h  PasswordManagerComponent.h  PipeSpawnerComponent.h  PlayerControlComponent.h  PlayerInventoryComponent.h  RigidBodyComponent.h  ScientistComponent.h  ScoreText.h  SpriteComponent.h  TextComponent.h  TimerComponent.h  TransformComponent.h  UIButtonComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventSystem/: AltEventBus.hpp  Event.h  EventBus.hpp
src/EventSystem/Events/: AnimationDoneEvent.h  ButtonClickEvent.h  CollisionEnterEvent.h  CollisionEvent.h  CollisionExitEvent.h  SoundEffectEvent.h  TimerBridgeEvent.h
src/Game/: Game.cpp  Game.h
src/InputManager/: InputManager.cpp  InputManager.h
src/LevelLoader/: LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/SceneLoader/: SceneLoader.cpp  SceneLoader.h
src/Systems/: AnimationSystem.hpp  BatterySystem.hpp  BridgeCrashSystem.hpp  CameraFollowSystem.hpp  CollectibleSystem.hpp  CollisionDebugSystem.hpp  CollisionSystem.hpp  ControlPanelSystem.hpp  DamageSystem.hpp  DoorSystem.hpp  ImGuiRenderSystem.hpp  LeverSystem.hpp  LifetimeSystem.hpp  MovementSystem.hpp  ObstacleCollisionSystem.hpp  ParentSystem.hpp  PasswordManagerSystem.hpp  PipeCollisionSytem.hpp  PipeSpawnSystem.hpp  PlayerAnimationSystem.hpp  PlayerControlSystem.hpp  PlayerControllerSystem.hpp  PlayerInteractionSystem.hpp  RenderSystem.hpp  ScientistSystem.hpp  ScoreUpdateSystem.hpp  SoundEffectSystem.hpp  TextRenderSystem.hpp  TimerSystem.hpp  UIButtonSystem.hpp  UIDebugSystem.hpp
